--- a/frontend-react/src/components/Header/Header.scss
+++ b/frontend-react/src/components/Header/Header.scss
@@ -1,4 +1,3 @@
-// Header Styles - Usando variáveis CSS do tema
 .header {
   background-color: var(--background-paper) !important;
   color: var(--text-primary) !important;
@@ -8,7 +7,7 @@
   top: 0 !important;
   left: 0 !important;
   right: 0 !important;
-  z-index: 1100 !important; // Garante que ficará por cima de outros elementos
+  z-index: 1100 !important; 
 
   &__toolbar {
     display: flex;
