--- a/frontend-react/src/components/PostList/PostList.scss
+++ b/frontend-react/src/components/PostList/PostList.scss
@@ -1,33 +1,34 @@
 .post-list-wrapper {
-  padding-left: 120px;
-  padding-right: 120px;
+  padding-left: var(--spacing-2xl);
+  padding-right: var(--spacing-2xl);
   box-sizing: border-box;
   width: 100%;
 
   .post-list {
     display: grid;
     grid-template-columns: repeat(4, minmax(0, 1fr));
-    gap: 80px;
-    padding-bottom: 100px;
-    margin-top: 80px;
-    margin-bottom: 80px;
+    gap: var(--spacing-2xl);
+    padding-bottom: var(--spacing-2xl);
+    margin-top: var(--spacing-2xl);
+    margin-bottom: var(--spacing-2xl);
     box-sizing: border-box;
 
     h2,
     .section-title {
       font-family: 'Montserrat', sans-serif;
-      font-weight: 700;
-      font-size: 32px;
-      margin-bottom: 32px;
+      font-weight: var(--font-weight-bold);
+      font-size: var(--font-size-2xl);
+      margin-bottom: var(--spacing-xl);
+      color: var(--text-primary);
     }
   }
 
   .section-title {
-    padding-top: 80px;
-    padding-left: 120px;
-    color: #111;
+    padding-top: var(--spacing-2xl);
+    padding-left: var(--spacing-2xl);
+    color: var(--text-primary);
     font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
+    font-weight: var(--font-weight-bold);
   }
 }
 
@@ -36,9 +37,9 @@
   .post-list-wrapper {
     .post-list {
       grid-template-columns: repeat(2, 1fr);
-      gap: 48px;
-      margin-top: 48px;
-      margin-bottom: 48px;
+      gap: var(--spacing-xl);
+      margin-top: var(--spacing-xl);
+      margin-bottom: var(--spacing-xl);
     }
   }
 }
@@ -48,9 +49,9 @@
   .post-list-wrapper {
     .post-list {
       grid-template-columns: 1fr;
-      gap: 32px;
-      margin-top: 32px;
-      margin-bottom: 32px;
+      gap: var(--spacing-lg);
+      margin-top: var(--spacing-lg);
+      margin-bottom: var(--spacing-lg);
     }
   }
 }
