fix: adjusting scss and integration db

--- a/frontend-react/src/components/Pagination/Pagination.scss
+++ b/frontend-react/src/components/Pagination/Pagination.scss
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   gap: var(--spacing-md); // distância entre os botões
-  margin: var(--spacing-lg) 0; // distância do footer
+  margin: var(--spacing-2xl) 0; // distância do footer
   font-weight: var(--font-weight-bold);
 
   .pagination-btn {
