--- a/frontend-react/src/components/Carousel/Carousel.scss
+++ b/frontend-react/src/components/Carousel/Carousel.scss
@@ -39,9 +39,8 @@
 
     .slide-overlay {
       border-radius: var(--border-radius-md);
-      padding-bottom: var(--spacing-xl);
-      margin: 0 0 var(--spacing-xl) var(--spacing-2xl);
-      color: var(--text-primary);
+      margin: 80px 120px;
+       color: #fff;
       max-width: 500px;
       position: absolute;
       left: 0;
@@ -60,7 +59,7 @@
         font-weight: var(--font-weight-normal);
         font-size: var(--font-size-md);
         margin-bottom: var(--spacing-lg);
-        color: var(--text-secondary);
+         color: #fff;
       }
 
       .btn-slide {
@@ -68,7 +67,7 @@
         font-weight: var(--font-weight-semibold);
         font-size: var(--font-size-md);
         display: inline-block;
-        background: var(--primary-main);
+        background: var(--secondary-main);
         color: var(--primary-contrast);
         padding: var(--spacing-sm) var(--spacing-lg);
         border-radius: var(--border-radius-sm);
@@ -77,7 +76,7 @@
         margin-top: var(--spacing-lg);
 
         &:hover {
-          background: var(--primary-dark);
+          background: var(--secondary-dark);
         }
       }
     }
