--- a/frontend-react/src/components/PostList/PostList.scss
+++ b/frontend-react/src/components/PostList/PostList.scss
@@ -1,6 +1,6 @@
 .post-list-wrapper {
-  padding-left: var(--spacing-2xl);
-  padding-right: var(--spacing-2xl);
+  padding-left: 120px;
+  padding-right: 120px;
   box-sizing: border-box;
   width: 100%;
 
@@ -8,7 +8,6 @@
     display: grid;
     grid-template-columns: repeat(4, minmax(0, 1fr));
     gap: var(--spacing-2xl);
-    padding-bottom: var(--spacing-2xl);
     margin-top: var(--spacing-2xl);
     margin-bottom: var(--spacing-2xl);
     box-sizing: border-box;
