fix: mearging components

--- a/frontend-react/src/components/PostList/PostList.scss
+++ b/frontend-react/src/components/PostList/PostList.scss
@@ -56,6 +56,11 @@
       }
     }
 
+    .search-post {
+      padding-left: 120px;
+      padding-top: 80px;
+    }
+
 /* Tablet */
 @media (max-width: 1024px) {
   .post-list-wrapper {
