feat:completion of the product registration form

--- a/frontend-react/src/components/FormPost/FormPost.scss
+++ b/frontend-react/src/components/FormPost/FormPost.scss
@@ -1,7 +1,6 @@
 .form-post-container {
-  max-width: 600px;
   margin: 32px auto 0 auto;
-  padding: 50px 0;
+  padding: 50px;
 }
 
 .form-post-paper {
