--- a/frontend-react/src/components/Carousel/Carousel.scss
+++ b/frontend-react/src/components/Carousel/Carousel.scss
@@ -134,14 +134,19 @@
 
 /* Mobile */
 @media (max-width: 700px) {
+  .swiper-button-next,
+  .swiper-button-prev {
+    display: none;
+  }
+    
   .carrosel-container {
-    height: 220px;
+    height: 100vh;
     margin-bottom: var(--spacing-xl);
 
     .slide-overlay {
-      padding: var(--spacing-md);
-      margin: 0 0 var(--spacing-sm) var(--spacing-sm);
-      max-width: 95vw;
+      padding: 0px 40px 20px 40px; 
+      margin: 0 auto;        
+      text-align: center;      
 
       h2 {
         font-size: var(--font-size-md);
@@ -149,7 +154,7 @@
       }
 
       p {
-        margin-bottom: var(--spacing-sm);
+        display: none;
       }
 
       .btn-slide {
