feat: Implementation of the back button in the admin and implementation of smart login

--- a/frontend-react/src/components/PostList/PostList.scss
+++ b/frontend-react/src/components/PostList/PostList.scss
@@ -4,7 +4,16 @@
   padding-right: 120px;
   box-sizing: border-box;
   width: 100%;
+  position: relative;
 
+  .admin-actions{
+    justify-content: space-between;
+    align-items: center;
+    display: flex;
+    width: 100%;
+    padding-left: 24px;
+    padding-right: 24px;
+  }
   .post-list {
     display: grid;
     grid-template-columns: repeat(4, minmax(0, 1fr));
