--- a/frontend-react/src/components/FormUser/FormUser.scss
+++ b/frontend-react/src/components/FormUser/FormUser.scss
@@ -7,6 +7,11 @@
   padding: 32px;
 }
 
+.submitButton{
+  background-color: #ccc !important;
+  box-shadow: none !important;
+}
+
 .form-post-title {
   text-align: center;
   margin-bottom: 16px;
