--- a/frontend-react/src/components/PostCard/PostCard.scss
+++ b/frontend-react/src/components/PostCard/PostCard.scss
@@ -109,7 +109,7 @@
   z-index: 10;
 
   .menu-toggle {
-    background: orange;
+    background: var(--secondary-main);;
     color: white;
     border: none;
     border-radius: 4px;
@@ -119,7 +119,7 @@
     transition: background 0.2s ease;
 
     &:hover {
-      background: darkorange;
+      background: var(--secondary-main);;
     }
   }
 
