--- a/frontend-react/src/components/searchPost/search.scss
+++ b/frontend-react/src/components/searchPost/search.scss
@@ -1,3 +1,37 @@
-.css-d31ug1{
-  width: 100%;
+.box_style_search {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 90%;        /* ajuste responsivo via media query */
+  max-width: 520px;  /* substitui o sm: 520 */
+  background-color: #fff; /* ou outra cor equivalente ao background.paper */
+  border-radius: 8px; /* 2 * 4px (padrão MUI) */
+  box-shadow: 0px 3px 6px rgba(0,0,0,0.24); /* equivalente ao 24 do MUI */
+  padding: 24px;     /* 3 * 8px (spacing MUI) */
+  outline: none;
+}
+.post-search {
+  gap: 1.5rem;
+  align-items: center;
+  width: 100%;  display: flex;
+  width: 80vw;
+  justify-content: center;
+  align-items: center;
+  margin-top: 40px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* A partir de sm (600px) */
+@media (min-width: 600px) {
+  .post-search {
+    margin-top: 40px;
+    display: flex;
+    width: 80vw;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
