--- a/web/frontend-react/src/styles/scss/base/App.scss
+++ b/web/frontend-react/src/styles/scss/base/App.scss
@@ -1,17 +1,45 @@
 // Global App Styles
 .app {
-  min-height: 100vh;
+  height: 100vh;
+  overflow: hidden;
 }
 
 // Layout para header fixo
 .main-content {
-  margin-top: 64px; // Altura do header
-  min-height: calc(100vh - 64px);
+  padding-top: 64px;
+  height: 100%;
+  min-height: 0;
+
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
   
   // Responsivo para mobile
-  @media (max-width: 768px) {
-    margin-top: 56px; // Header menor em mobile
-    min-height: calc(100vh - 56px);
+  @media (max-width: 768px) {.app {
+  height: 100vh;
+  overflow: hidden;
+}
+
+.main-content {
+  padding-top: 64px;
+  height: 100%;
+  min-height: 0;
+
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+
+  box-sizing: border-box;
+}
+
+@media (max-width: 768px) {
+  .main-content {
+    padding-top: 56px;
+  }
+}
+
+  margin-top: 56px;
+  min-height: calc(100vh - 56px);
   }
 }
 
